--- a/src/components/UserInfo/index.css
+++ b/src/components/UserInfo/index.css
@@ -21,3 +21,7 @@
 .userPageAvatar {
     background-color: #0B64A4;   
 }
+
+* {
+    box-sizing: border-box;
+}
